--- a/assets/scss/default/_typography.scss
+++ b/assets/scss/default/_typography.scss
@@ -69,17 +69,11 @@
 }
 
 
-//* Alte Haas Grotesk
+//* Oswald
 @font-face {
-  font-family: "Alte Haas";
-  src: url("../assets/fonts/Alte/AlteHaasGroteskRegular.ttf") format("truetype");
+  font-family: "Oswald";
+  src: url("../assets/fonts/Alte/Oswald-Variable.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Alte Haas Bold";
-  src: url("../assets/fonts/Alte/AlteHaasGroteskBold.ttf") format("truetype");
-  font-weight: bold;
   font-style: normal;
 }
 
